- Styling: fixed spacing between nav-tabs and tab-content for v2.

--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -9498,6 +9498,10 @@ ul.activeusers {
   display: block;
 }
 
+.nav-tabs + .tab-content {
+  margin-top: var(--spacing-small);
+}
+
 .nav-tabs .dropdown-menu {
   margin-top: -1px;
   border-top-left-radius: 0;
